# cuda-parallel-patterns

./: .gitignore  CMakeLists.txt  README.md  build.sh  pushes_log.txt
01_fundamentals/: CMakeLists.txt  matrix_mul.cu  vector_add.cu
02_memory_patterns/: CMakeLists.txt  coalescing.cu  shared_memory.cu
03_parallel_algorithms/: CMakeLists.txt  bitonic_sort.cu  reduction.cu  scan.cu
04_capstone_mini_project/: CMakeLists.txt  convolution.cu
common/: timer.h
docs/: README.md
scripts/: create_remote_repo.sh
